Update deps to allow any `webpack` version above (and inc) 2.0.0.

--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "main": "src/index.js",
   "license": "MIT",
   "peerDependencies": {
-    "webpack": "^2.0.0"
+    "webpack": ">=2.0.0"
   },
   "devDependencies": {
-    "webpack": "^2.0.0"
+    "webpack": ">=2.0.0"
   }
 }
