Make repo easier to find on npm
This will make it so that npm links to the issues page as well as to the repo so that it can be more easily contributed to.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "peer-deps-externals-webpack-plugin",
   "version": "1.0.3",
   "description": "Webpack plugin to automatically add a library's peerDependencies to its bundle's externals.",
+  "repository": "github:Updater/peer-deps-externals-webpack-plugin",
+  "bugs": "https://github.com/Updater/peer-deps-externals-webpack-plugin/issues",
   "keywords": [
     "webpack",
     "plugin",
